# snippets

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  experiment-plan.md  main.py  manual_list_repos_check.py  manual_reader_scroll_check.py  pyproject.toml  query.py  upload_snippets.py
docker/: .env.example  Dockerfile  Dockerfile.api  Dockerfile.front  Dockerfile.worker  docker-compose.yaml
front/: .env.local.example  package-lock.json  package.json  tsconfig.json
front/app/: globals.css  layout.tsx  page.tsx
front/components/: config-dialogs.tsx  repo-embedder.tsx  repository-list.tsx
front/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  (+2 more)
front/constants/: mockData.ts
front/hooks/: useRepositories.tsx  useRepositoryUtils.tsx
front/types/: index.ts
src/: __init__.py  exception_handler.py  file_loader.py  process_queue.py  prompt.py  snippet_extractor.py  snippet_storage.py  wrapper.py
src/agent/: __init__.py  prompt.py  snippet_extractor.py
src/agents/: prompt.py  snippet_extractor.py
src/api/: __init__.py  model.py  route.py  routes.py  server.py  service.py
src/mcpserver/: __init__.py  server.py
src/orchestration/: __init__.py  extraction.py  process_queue.py  write_pipeline.py
src/snippet/: __init__.py  model.py  snippet_storage.py
src/utils/: __init__.py  chunker.py  file_loader.py  github_repo.py  reranker.py
src/vectordb/: __init__.py  config.py  embedding.py  reader.py  writer.py
src/worker/: __init__.py  queue.py  status.py  worker.py
tests/api/: test_routes.py
tests/vectordb/: test_reader.py
(+3 files in other folders)
