[project]
name = "snippets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-toolkit>=0.2.2",
    "pydantic>=2.5.0",
    "google-genai>=0.3.0",
    "qdrant-client>=1.9.0",
    "fastapi>=0.111.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "uvicorn>=0.23.0",
]
